# marimo

./: package-lock.json
frontend/public/pyodide/: labdata_api-0.0.12-py3-none-any.whl  packages.json
frontend/src/components/app-config/: labdata-config-form.tsx  user-config-form.tsx
frontend/src/core/wasm/worker/: bootstrap.ts
labdata_api_temp/: .gitignore  pyproject.toml  setup.py
labdata_api_temp/labdata_api/: AsynchronousCompatibilityMarimo.md  __init__.py  fulldata.py  labdata.py  program.py
labdata_api_temp/labdata_api/src/: README.md  __init__.py  captures.py  labdata.py  program.py  pyproject.toml
marimo/_config/: config.py
marimo/_plugins/labdata/: __init__.py
openapi/: package.json  pnpm-lock.yaml
