[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labdata_api"
version = "0.0.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Labdata API for accessing and managing lab data"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "requests"
]

[tool.hatch.build]
include = [
    "labdata_api/*.py",
    "labdata_api/**/*.py",
]
exclude = [
    "test_venv*",
    "dist",
    "build",
    "*.egg-info",
    "__pycache__",
    "*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["labdata_api"]
