[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labdata-api"
version = "0.0.12"
description = "A temporary package for development"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
    "labdata_api/**/*.py",
]
